--- a/Models/SpeechLM/ST2S/2025.02.16_FELLE.md
+++ b/Models/SpeechLM/ST2S/2025.02.16_FELLE.md
@@ -107,7 +107,7 @@ Our contributions can be summarized as:
 <table><tr><td width="50%">
 
 Zero-shot text-to-speech approaches are commonly categorized into autoregressive and non-autoregressive paradigms based on their output generation mechanisms.
-Autoregressive systems typically rely on language model architectures \citep{wang2023valle, kharitonov2023speak,yang2024interleaved}, whereas non-autoregressive implementations commonly employ diffusion models and analogous methodologies \citep{junaturalspeech, chen2024f5}.
+Autoregressive systems typically rely on language model architectures (**VALL-E**[^wang2023valle], **SPEAR-TTS**[^kharitonov2023speak], **IST-LM**[^yang2024interleaved]), whereas non-autoregressive implementations commonly employ diffusion models and analogous methodologies (**NaturalSpeech3**[^junaturalspeech], **F5-TTS**[^chen2024f5]).
 The subsequent discussion concentrates on research efforts investigating diverse representations under the framework of autoregressive language modeling architectures.
 
 </td><td>
@@ -119,9 +119,9 @@ The subsequent discussion concentrates on research efforts investigating diverse
 
 TTS systems based on discrete representations utilize tokenized acoustic units derived from unsupervised or semi-supervised learning frameworks.
 These discrete tokens serve as compact and efficient representations of speech, capturing phonetic and prosodic attributes while reducing redundancy in data storage and computation.
-VALL-E \citep{wang2023valle} is a neural codec language model for text-to-speech synthesis that firstly redefines TTS as a conditional language modeling task, enabling high-quality, personalized speech generation from just a 3-second acoustic prompt, significantly advancing naturalness and speaker similarity.
-Recent studies further enhance VALL-E’s capabilities across multilingual generalization \citep{zhang2023vallex}, decoding efficiency \citep{chen2024valle2}, and robustness \citep{song2024ellav,xin2024ralle,han2024valler}, collectively advancing zero-shot speech synthesis in scalability, quality, and linguistic flexibility.
-In contrast to the unified language modeling approach of VALL-E and its variants, CosyVoice \citep{du2024cosyvoice} leverages an LLM for text-to-token conversion followed by a conditional flow-matching model for token-to-spectrogram synthesis, enhancing zero-shot voice cloning through end-to-end supervised speech token learning.
+**VALL-E**[^wang2023valle] is a neural codec language model for text-to-speech synthesis that firstly redefines TTS as a conditional language modeling task, enabling high-quality, personalized speech generation from just a 3-second acoustic prompt, significantly advancing naturalness and speaker similarity.
+Recent studies further enhance **VALL-E**’s capabilities across multilingual generalization (**VALL-E X**[^zhang2023vallex]), decoding efficiency (**VALL-E 2**[^chen2024valle2]), and robustness (**ELLA-V**[^song2024ellav], **RALL-E**[^xin2024ralle], **VALL-E R**[^han2024valler]), collectively advancing zero-shot speech synthesis in scalability, quality, and linguistic flexibility.
+In contrast to the unified language modeling approach of **VALL-E** and its variants, **CosyVoice**[^du2024cosyvoice] leverages an LLM for text-to-token conversion followed by a conditional flow-matching model for token-to-spectrogram synthesis, enhancing zero-shot voice cloning through end-to-end supervised speech token learning.
 
 </td></tr>
 <tr><td>
@@ -129,19 +129,17 @@ In contrast to the unified language modeling approach of VALL-E and its variants
 **Continuous-Valued Token-Based TTS**
 
 Recent advances in continuous representation-based TTS systems eliminate the need for cumbersome codec training while achieving promising performance.
-Notably, MELLE \citep{meng2024autoregressive} proposes a single-pass language model architecture leveraging rich continuous acoustic representations, enabling precise control over prosodic features including pitch, rhythm, and timbre for high-fidelity speech synthesis.
-In contrast, SALAD \citep{turetzky2024continuous} is a zero-shot text-to-speech system that employs a per-token latent diffusion model on continuous representations, enabling variable-length audio generation through semantic tokens for contextual guidance and stopping control.
+Notably, **MELLE**[^meng2024autoregressive] proposes a single-pass language model architecture leveraging rich continuous acoustic representations, enabling precise control over prosodic features including pitch, rhythm, and timbre for high-fidelity speech synthesis.
+In contrast, **SALAD**[^turetzky2024continuous] is a zero-shot text-to-speech system that employs a per-token latent diffusion model on continuous representations, enabling variable-length audio generation through semantic tokens for contextual guidance and stopping control.
 While this method achieves superior intelligibility scores, it may face challenges related to time costs.
-Alternatively, KALL-E \citep{zhu2024autoregressive} adopts an autoregressive approach with WaveVAE to directly model speech distributions, bypassing both VAE and diffusion paradigms, demonstrating enhanced naturalness and speaker similarity through probabilistic waveform prediction.
+Alternatively, **KALL-E**[^zhu2024autoregressive] adopts an autoregressive approach with WaveVAE to directly model speech distributions, bypassing both VAE and diffusion paradigms, demonstrating enhanced naturalness and speaker similarity through probabilistic waveform prediction.
 
 </td><td>
 
 </td></tr>
 <tr><td>
 
-**Flow Matching**
-
-Flow matching~\citep{lipman2022flow} is a technique for learning a transformation that maps a prior distribution $p_0$ to a target distribution $q(x)$.
+**Flow Matching**[^lipman2022flow] is a technique for learning a transformation that maps a prior distribution $p_0$ to a target distribution $q(x)$.
 The core idea of flow matching is to define a flow $\phi_t(x)$ that evolves over time, transforming the prior distribution $p_0$ into the target distribution $q(x)$.
 This flow $\phi_t(x)$ is governed by a vector field $v_t(x)$ and satisfies the following ordinary differential equation (ODE):
 
@@ -202,9 +200,13 @@ where time $t$ is uniformly sampled from $\mathcal{U}[0,1]$, data points $x_1$ a
 [^bredell2023explicitly]: Explicitly Minimizing the Blur Error of Variational Autoencoders.
 ICLR2023.
 [^brown2020language]: [**GPT-3**: Language Models Are Few-Shot Learners.](../../TextLM/2020.05.28_GPT-3.md) NeurIPS2020.
+[^chen2024f5]: [**F5-TTS**: A Fairytaler that Fakes Fluent and Faithful Speech with Flow Matching.](../../Diffusion/2024.10.09_F5-TTS.md) ArXiv:2410.06885.
 [^chen2024valle2]: [**VALL-E 2**: Neural Codec Language Models Are Human Parity Zero-Shot Text to Speech Synthesizers.](2024.06.08_VALL-E_2.md) ArXiv:2406.05370.
 [^defossez2024moshi]: [**Moshi**: A Speech-Text Foundation Model for Real-Time Dialogue.](../../SpokenDialogue/2024.09.17_Moshi.md) ArXiv:2410.00037.
+[^du2024cosyvoice]: [**Cosyvoice**: A Scalable Multilingual Zero-Shot Text-to-Speech Synthesizer Based on Supervised Semantic Tokens.](../2024.07.07_CosyVoice.md) ArXiv:2407.05407.
 [^han2024valler]: [**VALL-E R**: Robust and Efficient Zero-Shot Text-to-Speech Synthesis via Monotonic Alignment.](2024.06.12_VALL-E_R.md) ArXiv:2406.07855.
+[^junaturalspeech]: [**NaturalSpeech3**: Zero-Shot Speech Synthesis with Factorized Codec and Diffusion Models.](../../Diffusion/2024.03.05_NaturalSpeech3.md) ICML2024.
+[^kharitonov2023speak]: [**SPEAR-TTS**: Speak, Read and Prompt: High-Fidelity Text-to-Speech with Minimal Supervision.](2023.02.07_SPEAR-TTS.md) TACL2023.
 [^kingma2013auto]: [**VAE**: Auto-Encoding Variational Bayes.](../../_Basis/VAE.md) ICLR2014.
 [^lipman2022flow]: [**Flow Matching**: Flow Matching for Generative Modeling](../../Diffusion/2022.10.06_Flow_Matching.md) ArXiv:2210.02747.
 [^meng2024autoregressive]: [**MELLE**: Autoregressive Speech Synthesis without Vector Quantization.](2024.07.11_MELLE.md) ArXiv:2407.08551.
@@ -213,10 +215,14 @@ ICLR2023.
 ICASSP2024.
 [^ren-etal-2022-revisiting]: Revisiting Over-Smoothness in Text to Speech.
 ACL2022.
+[^song2024ellav]: [**ELLA-V**: Stable Neural Codec Language Modeling with Alignment-Guided Sequence Reordering.](2024.01.14_ELLA-V.md) ArXiv2024.
 [^team2024gemini]: [**Gemini 1.5**: Unlocking Multimodal Understanding Across Millions of Tokens of Context.](../../TextLM/2024.03.08_Gemini_1.5.md) ArXiv:2403.05530.
 [^tomczak2018vae]: VAE with a VampPrior.
 AISTATS2018.
 [^turetzky2024continuous]: [**SALAD**: Continuous Speech Synthesis Using Per-Token Latent Diffusion.](../../Diffusion/2024.10.21_SALAD.md) ArXiv:2410.16048.
 [^vasquez2019melnet]: [**MelNet**: A Generative Model for Audio in the Frequency Domain.](../../Acoustic/2019.06.04_MelNet.md) ArXiv:1906.01083.
 [^wang2023valle]: [**VALL-E**: Neural Codec Language Models Are Zero-Shot Text to Speech Synthesizers.](2023.01.05_VALL-E.md) ArXiv:2301.02111.
+[^xin2024ralle]: [**RALL-E**: Robust Codec Language Modeling with Chain-of-Thought Prompting for Text-to-Speech Synthesis.](2024.04.04_RALL-E.md) ArXiv:2404.03204.
+[^yang2024interleaved]: [**IST-LM**: Interleaved Speech-Text Language Models Are Simple Streaming Text to Speech Synthesizers.](2024.12.20_IST-LM.md) ArXiv:2412.16102.
+[^zhang2023vallex]: [**VALL-E X**: Speak Foreign Languages with Your Own Voice: Cross-Lingual Neural Codec Language Modeling.](2023.03.07_VALL-E_X.md) ArXiv:2303.03926.
 [^zhu2024autoregressive]: [**KALL-E**: Autoregressive Speech Synthesis with Next-Distribution Prediction.](2024.12.22_KALL-E.md) ArXiv:2412.16846.
