--- a/Models/SpeechLM/ST2S/2025.02.16_FELLE.md
+++ b/Models/SpeechLM/ST2S/2025.02.16_FELLE.md
@@ -171,7 +171,169 @@ where time $t$ is uniformly sampled from $\mathcal{U}[0,1]$, data points $x_1$ a
 
 ## 3·Methodology: 方法
 
+### Problem Formulation: Token-wise Flow Matching for AR Model
+
 <table><tr><td width="50%">
+
+Following MELLE's autoregressive language modeling framework for mel-spectrogram prediction, we reformulate zero-shot TTS through a hierarchical flow-matching mechanism at each prediction step.
+Each mel-spectrogram frame $\bm{x}^i \in \mathbb{R}^D$ (where $D$ denotes the mel-band dimension) is treated as a continuous token, generated sequentially through an autoregressive process.
+Given an input text sequence $\bm{y} = [y^0, \ldots, y^{N-1}]$, speech prompt $\bm{\widehat{x}}$, and previously generated tokens $\bm{x}^{<i} = [\bm{x}^0, \ldots, \bm{x}^{i-1}]$, the model predicts the current token $\bm{x}^i$ by integrating language model guidance into the flow-matching paradigm.
+The joint distribution is decomposed autoregressively as:
+$$
+\begin{aligned}
+    p(\bm{X} \! \mid\!\bm{y})\!
+   &= \prod_{i=0}^{L-1} p(\bm{x}^i \mid \bm{x}^{<i}, \bm{y}, \bm{\widehat{x}})  \\
+   &=\! \prod_{i=0}^{L-1} p_{\theta_\text{FM}}(\bm{x}^i \mid \bm{z}^i), \bm{z}^i\!=\!f_{\theta_\text{LM}}(\bm{x}^{<i}, \bm{y},\bm{\widehat{x}} \notag) .
+\end{aligned}
+$$
+
+$\bm{X} = [\bm{x}^0, \ldots, \bm{x}^{L-1}] \in \mathbb{R}^{L \times D}$ denotes full mel-spectrogram sequence, $L$ represents the total number of mel-spectrogram frames.
+The language model $f_{\theta_\text{LM}}(\cdot)$ generates hidden state $\bm{z}^i$ that captures both linguistic content and acoustic context, while $p_{\theta_\text{FM}}(\cdot \mid \bm{z}^i)$ denotes the flow-matching module that transforms prior distributions into target distributions conditioned on $\bm{z}^i$.
+
+</td><td>
+
+</td></tr></table>
+
+### Architecture
+
+<table><tr><td width="50%">
+
+The proposed framework combines an autoregressive language model with a flow-matching mechanism, which facilitates the progressive generation of high-fidelity speech.
+As shown in [Figure.01](#Fig.01), the autoregressive model $f_{\theta_\text{LM}}$ extracts features from the text prompt $ \bm{y} $ and speech prompt  $ \bm{\widehat{x}} $, generating latent representations $\bm{z}^i$ (where $i$ denotes the generation step) that serve as conditional inputs for the flow-matching mechanism.
+The flow-matching mechanism applies a coarse-to-fine strategy to generate high-quality mel-spectrogram frames $\bm{x}^i$.
+The main components of the approach are described in detail below.
+
+</td></tr></table>
+
+### Autoregressive Language Model
+
+<table><tr><td width="50%">
+
+The language model, designed as a unidirectional Transformer decoder, generates acoustic features autoregressively by utilizing both text sequences and mel-spectrogram prompts.
+In the initial step, the text tokens are embedded, while a pre-net maps the mel-spectrogram into the dimensional space of the LM.
+By processing the combined text $ \bm{y} $, speech prompt $ \bm{\widehat{x}} $, and acoustic embeddings $ \bm{x}^{<i} $, the language model $ f_{\theta_\text{LM}} $ processes multi-head attention and feed-forward layers to capture the intricate relationship between linguistic and acoustic information.
+The output at each time step subsequently serves as a conditioning input for the coarse-to-fine flow-matching module to synthesize the next-frame acoustic features.
+
+</td><td>
+
+</td></tr></table>
+
+### Coarse-to-Fine Flow Matching
+
+<table><tr><td width="50%">
+
+For high-quality mel-spectrogram generation, we introduce a coarse-to-fine flow-matching approach.
+As illustrated in [Figure.02](#Fig.02), the method generates each mel-spectrogram frame based on its preceding frame, maintaining temporal consistency throughout the sequence.
+The generation process is divided into two phases: a coarse generation phase followed by a fine refinement phase.
+A detailed introduction will be given below.
+
+</td><td>
+
+</td></tr>
+<tr><td>
+
+**Prior Distribution**
+
+Flow-matching-based methods in speech synthesis commonly adopt a simple prior distribution **VoiceBox**[^le2024voicebox], **Matcha-TTS**[^mehta2024matcha], as prior knowledge is often challenging to define precisely (**F5-TTS**[^chen2024f5]).
+However, utilizing a prior distribution that closely aligns with the target distribution can significantly enhance computational efficiency and synthesis quality (**SpeechGPT**[^zhang2024speechgpt]).
+Given the autoregressive nature of token generation and the sequential structure of speech, \our{} employs the preceding token as an informative prior to guide the flow matching process for generating the current token.
+Specifically, the prior distribution $ p_0 $ for the initial state $ x_0^i $ of the current frame $ x^i $ is derived from the mel-spectrogram of the previous frame $ x^{i-1} $:
+
+$$
+\begin{aligned}
+p_0(x_0^i | x^{i-1}) = \mathcal{N}(x_0^i | x^{i-1}, \sigma^2 I),
+\end{aligned}
+$$
+
+where $ \sigma^2 I $ represents the covariance matrix of the Gaussian noise.
+For $ i = 0 $, where no prior frame exists, the initial state is drawn from a standard Gaussian distribution.
+
+</td><td>
+
+</td></tr>
+<tr><td>
+
+**Coarse-to-Fine Generation**
+
+Our method combines autoregressive language modeling with hierarchical flow matching.
+Each step $ i $ follows a two-stage process, as illustrated in [Figure.02(a)](#Fig.02): a coarse flow-matching phase that produces an initial low-resolution mel-spectrogram representation, followed by a fine flow-matching phase that enhances the output by incorporating both the coarse representation and language model outputs.
+
+The coarse generation stage is designed to produce the low-resolution component $ x^{i,c} $ of the $ i $-th frame through a downsampling operation $ x^{i,c} = \mathrm{Downsample}(x^i) $.
+In this framework, the coarse flow-matching model predicts a vector field $ v_t^c(x^{i,c}, z^i; \theta_{\text{FM}}^c) $ by conditioning on linguistic features $ z^i $ extracted from the language model.
+
+In the fine stage, the model refines this approximation by recovering details $ x^{i,f} $, represented as the residual between the original frame $ x^i $ and the upsampled coarse component $ \text{\textit{Upsample}}(x^{i,c}) $.
+A secondary flow-matching model predicts the vector field $ v_t^f(x^{i,f}, z^i, x^{i,c}; \theta_\text{FM}^f) $, governing this process by leveraging both the features $ z^i $ and the coarse component (with ground-truth coarse features $x^{i,c}$ during training and predicted values $\tilde{x}^{i,c}$ during inference) as conditional inputs.
+This hierarchical conditioning allows the fine model to focus on local details while preserving global coherence from the coarse stage.
+
+For step $ i $, the training objective combines losses from both stages:
+\begin{align}
+\mathcal{L}_{\text{C2F-FM}} = \underbrace{\mathbb{E}_{t, x_1^{i,c}, x^{i,c}} \left\| u_t^c - v_t^c(x^{i,c}, z^i; \theta_\text{FM}^c) \right\|^2}_{\text{Coarse Stage}} + \underbrace{\mathbb{E}_{t, x_1^{i,f}, x^{i,f}} \left\| u_t^f - v_t^f(x^{i,f}, z^i, x_1^{i,c}; \theta_\text{FM}^f) \right\|^2}_{\text{Fine Stage}},
+\end{align}
+where $ u_t^c $ and $ u_t^f $ represent the true conditional vector fields for the coarse and fine components, respectively, and $ t \sim \mathcal{U}[0,1] $.
+The initial states $ x_0^{i,c} $ and $ x_0^{i,f} $ are similarly initialized using the prior from Equation~\ref{eq:prior}, applying the corresponding sampling operations.
+By decoupling low-resolution structure learning from high-detail refinement, this coarse-to-fine approach generates high-fidelity mel-spectrograms while maintaining temporal consistency through autoregressive dependencies.
+
+</td><td>
+
+</td></tr>
+<tr><td>
+
+**Classifier-Free Guidance**
+
+Classifier-free guidance (CFG) is a powerful technique to enhance the quality and controllability of generated outputs in flow matching and diffusion models (**CFG**[^ho2022classifier], **iDDPM**[^nichol2021improved]).
+In \our, we implement CFG through joint training of coarse and fine flow matching models using both conditional and unconditional objectives.
+During training, we randomly mask the speech prompt with probability $p_{\text{drop}}$ for unconditional learning, which enables each model to learn dual vector fields.
+
+At inference, guided vector fields are computed through linear blending:
+
+$$
+\begin{aligned}
+\hat{v}_t^\ast(x^\ast; \cdot) &= w v_t^\ast(x^\ast, c; \theta_\text{FM}^\ast) + (1-w) v_t^\ast(x^\ast, \bar{c}; \theta_\text{FM}^\ast),
+\end{aligned}
+$$
+
+where $\ast \in \{c,f\}$ denotes the model stage, $c$ represents the full conditions, $\bar{c}$ indicates the reduced conditioning state where the speaker prompt is masked, and $w$ represents the guidance scale.
+
+</td><td>
+
+</td></tr></table>
+
+### Training Objective
+
+<table><tr><td width="50%">
+
+In \our, we integrate the condition loss $ \mathcal{L}_\text{cond} $ in addition to coarse-to-fine loss $ \mathcal{L}_{\text{C2F-FM}} $.
+ $ \mathcal{L}_\text{cond} $ is a hybrid loss function that combines L1 and L2 norms, defined as $ \mathcal{L}_{\text{cond}} = \|z_i - x_i\|_1 + \|z_i - x_i\|_2^2 $, for step $i$ to regularize the conditional input for flow matching.
+Additionally, we introduce a stop prediction module to the autoregressive language model.
+This module, during each step of generation, transforms the hidden state output by the language model into the probability of a stop signal through a linear layer and calculates the Binary Cross-Entropy loss $ \mathcal{L}_\text{stop} $ for training.
+The model can automatically determine when to stop during the generation process without the need to preset length rules.
+The overall training objective is:
+
+$$
+\begin{aligned}
+\mathcal{L} = \mathcal{L}_{\text{C2F-FM}} + \lambda \mathcal{L}_{\text{cond}} + \alpha \mathcal{L}_{\text{stop}}
+\end{aligned}
+$$
+
+where $ \lambda $ and $ \alpha $ control the respective contributions of $ \mathcal{L}_{\text{cond}} $ and $ \mathcal{L}_{\text{stop}} $.
+
+</td><td>
+
+</td></tr></table>
+
+### Inference
+
+<table><tr><td width="50%">
+
+As illustrated in [Figure.02(b)](#Fig.02), the inference process employs an autoregressive language model that progressively generates hidden representations based on textual and speaker prompts.
+At each step $i$, the computed latent state $z_i$ serves two key purposes.
+First, it provides conditional guidance for the coarse flow-matching module, facilitating the gradual transformation from the previous mel-spectrogram approximation $\tilde{x}^{i-1,c}$ to the current coarse structural estimate $\tilde{x}^{i,c}$.
+Following this coarse estimation phase, the integrated information of $\tilde{x}^{i,c}$ and $z_i$ drives the fine flow-matching module to produce the fined mel-spectrogram frame $\tilde{x}^{i,f}$.
+The final output frame $\tilde{x}^i$ emerges through the integration of these complementary coarse and refined predictions.
+Secondly, the latent state $z_i$ processed by the stop prediction module to compute the stop probability, which is compared against a predefined threshold to decide whether to terminate the process.
+The iterative generation continues until the stop criterion is satisfied, after which a neural vocoder converts the accumulated mel-spectrogram into the final speech waveform.
+
+</td><td>
 
 </td></tr></table>
 
@@ -205,11 +367,15 @@ ICLR2023.
 [^defossez2024moshi]: [**Moshi**: A Speech-Text Foundation Model for Real-Time Dialogue.](../../SpokenDialogue/2024.09.17_Moshi.md) ArXiv:2410.00037.
 [^du2024cosyvoice]: [**Cosyvoice**: A Scalable Multilingual Zero-Shot Text-to-Speech Synthesizer Based on Supervised Semantic Tokens.](../2024.07.07_CosyVoice.md) ArXiv:2407.05407.
 [^han2024valler]: [**VALL-E R**: Robust and Efficient Zero-Shot Text-to-Speech Synthesis via Monotonic Alignment.](2024.06.12_VALL-E_R.md) ArXiv:2406.07855.
+[^ho2022classifier]: [**CFG**: Classifier-Free Diffusion Guidance.](../../Diffusion/2022.07.26_Classifier-Free_Guidance.md) NeurIPS2021.
 [^junaturalspeech]: [**NaturalSpeech3**: Zero-Shot Speech Synthesis with Factorized Codec and Diffusion Models.](../../Diffusion/2024.03.05_NaturalSpeech3.md) ICML2024.
 [^kharitonov2023speak]: [**SPEAR-TTS**: Speak, Read and Prompt: High-Fidelity Text-to-Speech with Minimal Supervision.](2023.02.07_SPEAR-TTS.md) TACL2023.
 [^kingma2013auto]: [**VAE**: Auto-Encoding Variational Bayes.](../../_Basis/VAE.md) ICLR2014.
+[^le2024voicebox]: [**VoiceBox**: Text-Guided Multilingual Universal Speech Generation at Scale.](../2023.06.23_VoiceBox.md) NeurIPS2024.
 [^lipman2022flow]: [**Flow Matching**: Flow Matching for Generative Modeling](../../Diffusion/2022.10.06_Flow_Matching.md) ArXiv:2210.02747.
+[^mehta2024matcha]: [**Matcha-TTS**: A Fast TTS Architecture with Conditional Flow Matching.](../../Diffusion/2023.09.06_Matcha-TTS.md) ICASSP2024.
 [^meng2024autoregressive]: [**MELLE**: Autoregressive Speech Synthesis without Vector Quantization.](2024.07.11_MELLE.md) ArXiv:2407.08551.
+[^nichol2021improved]: [**iDDPM**: Improved Denoising Diffusion Probabilistic Models.](../../Diffusion/2021.02.18_iDDPM.md) ICML2021.
 [^panayotov2015librispeech]: [**LibriSpeech**: An ASR Corpus Based on Public Domain Audio Books.](../../../Datasets/2015.04.19_LibriSpeech.md) ICASSP2015.
 [^puvvada2024discrete]: Discrete Audio Representation as an Alternative to Mel-Spectrograms for Speaker and Speech Recognition.
 ICASSP2024.
@@ -225,4 +391,5 @@ AISTATS2018.
 [^xin2024ralle]: [**RALL-E**: Robust Codec Language Modeling with Chain-of-Thought Prompting for Text-to-Speech Synthesis.](2024.04.04_RALL-E.md) ArXiv:2404.03204.
 [^yang2024interleaved]: [**IST-LM**: Interleaved Speech-Text Language Models Are Simple Streaming Text to Speech Synthesizers.](2024.12.20_IST-LM.md) ArXiv:2412.16102.
 [^zhang2023vallex]: [**VALL-E X**: Speak Foreign Languages with Your Own Voice: Cross-Lingual Neural Codec Language Modeling.](2023.03.07_VALL-E_X.md) ArXiv:2303.03926.
+[^zhang2024speechgpt]: [**SpeechGPT**: Empowering Large Language Models with Intrinsic Crossmodal Conversational Abilities.](../../SpokenDialogue/2023.05.18_SpeechGPT.md) EMNLP2023.
 [^zhu2024autoregressive]: [**KALL-E**: Autoregressive Speech Synthesis with Next-Distribution Prediction.](2024.12.22_KALL-E.md) ArXiv:2412.16846.
