--- a/Models/SpeechLM/ST2S/2025.02.16_FELLE.md
+++ b/Models/SpeechLM/ST2S/2025.02.16_FELLE.md
@@ -123,6 +123,8 @@ These discrete tokens serve as compact and efficient representations of speech, 
 Recent studies further enhance **VALL-E**’s capabilities across multilingual generalization (**VALL-E X**[^zhang2023vallex]), decoding efficiency (**VALL-E 2**[^chen2024valle2]), and robustness (**ELLA-V**[^song2024ellav], **RALL-E**[^xin2024ralle], **VALL-E R**[^han2024valler]), collectively advancing zero-shot speech synthesis in scalability, quality, and linguistic flexibility.
 In contrast to the unified language modeling approach of **VALL-E** and its variants, **CosyVoice**[^du2024cosyvoice] leverages an LLM for text-to-token conversion followed by a conditional flow-matching model for token-to-spectrogram synthesis, enhancing zero-shot voice cloning through end-to-end supervised speech token learning.
 
+</td><td>
+
 </td></tr>
 <tr><td>
 
@@ -176,42 +178,43 @@ where time $t$ is uniformly sampled from $\mathcal{U}[0,1]$, data points $x_1$ a
 <table><tr><td width="50%">
 
 Following **MELLE**'s autoregressive language modeling framework for mel-spectrogram prediction, we reformulate zero-shot TTS through a hierarchical flow-matching mechanism at each prediction step.
-Each mel-spectrogram frame $\bm{x}^i \in \mathbb{R}^D$ (where $D$ denotes the mel-band dimension) is treated as a continuous token, generated sequentially through an autoregressive process.
-Given an input text sequence $\bm{y} = [y^0, \ldots, y^{N-1}]$, speech prompt $\bm{\widehat{x}}$, and previously generated tokens $\bm{x}^{<i} = [\bm{x}^0, \ldots, \bm{x}^{i-1}]$, the model predicts the current token $\bm{x}^i$ by integrating language model guidance into the flow-matching paradigm.
+Each mel-spectrogram frame $\mathbf{x}^i \in \mathbb{R}^D$ (where $D$ denotes the mel-band dimension) is treated as a continuous token, generated sequentially through an autoregressive process.
+Given an input text sequence $\mathbf{y} = [y^0, \ldots, y^{N-1}]$, speech prompt $\mathbf{\widehat{x}}$, and previously generated tokens $\mathbf{x}^{<i} = [\mathbf{x}^0, \ldots, \mathbf{x}^{i-1}]$, the model predicts the current token $\mathbf{x}^i$ by integrating language model guidance into the flow-matching paradigm.
 
 The joint distribution is decomposed autoregressively as:
+
 $$
 \begin{aligned}
-p(\bm{X} \! \mid\!\bm{y})\!
-&= \prod_{i=0}^{L-1} p(\bm{x}^i \mid \bm{x}^{<i}, \bm{y}, \bm{\widehat{x}})  \\
-&= \prod_{i=0}^{L-1} p_{\theta_\text{FM}}(\bm{x}^i \mid \bm{z}^i),\\
-\bm{z}^i&=f_{\theta_\text{LM}}(\bm{x}^{<i}, \bm{y},\bm{\widehat{x}}).
+p(\mathbf{X}|\mathbf{y})
+&= \prod_{i=0}^{L-1} p(\mathbf{x}^i | \mathbf{x}^{<i}, \mathbf{y}, \mathbf{\widehat{x}})\\
+&= \prod_{i=0}^{L-1} p_{\theta_\text{FM}}(\mathbf{x}^i | \mathbf{z}^i),\\
+\mathbf{z}^i&=f_{\theta_\text{LM}}(\mathbf{x}^{<i}, \mathbf{y},\mathbf{\widehat{x}}).
 \end{aligned}
 $$
 
-$\bm{X} = [\bm{x}^0, \ldots, \bm{x}^{L-1}] \in \mathbb{R}^{L \times D}$ denotes full mel-spectrogram sequence, $L$ represents the total number of mel-spectrogram frames.
-The language model $f_{\theta_\text{LM}}(\cdot)$ generates hidden state $\bm{z}^i$ that captures both linguistic content and acoustic context, while $p_{\theta_\text{FM}}(\cdot \mid \bm{z}^i)$ denotes the flow-matching module that transforms prior distributions into target distributions conditioned on $\bm{z}^i$.
+$\mathbf{X} = [\mathbf{x}^0, \ldots, \mathbf{x}^{L-1}] \in \mathbb{R}^{L \times D}$ denotes full mel-spectrogram sequence, $L$ represents the total number of mel-spectrogram frames.
+The language model $f_{\theta_\text{LM}}(\cdot)$ generates hidden state $\mathbf{z}^i$ that captures both linguistic content and acoustic context, while $p_{\theta_\text{FM}}(\cdot | \mathbf{z}^i)$ denotes the flow-matching module that transforms prior distributions into target distributions conditioned on $\mathbf{z}^i$.
 
 </td><td>
 
 遵循 **MELLE** 用于梅尔频谱预测的自回归语言建模框架, 我们通过在每个预测步采用分层流匹配机制重新构建零样本文本转语音.
-每个梅尔频谱帧 $\bm{x}^i \in \mathbb{R}^D$ ($D$ 表示梅尔频带维度) 视为一个连续的 Token, 通过自回归过程顺序生成.
-给定输入文本序列 $\bm{y} = [y^0, \ldots, y^{N-1}]$, 语音提示 $\bm{\widehat{x}}$, 以及之前生成的 Token $\bm{x}^{<i} = [\bm{x}^0, \ldots, \bm{x}^{i-1}]$, 模型通过将语言模型引导融合到流匹配范式中以预测当前 Token $\bm{x}^i$.
+每个梅尔频谱帧 $\mathbf{x}^i \in \mathbb{R}^D$ ($D$ 表示梅尔频带维度) 视为一个连续的 Token, 通过自回归过程顺序生成.
+给定输入文本序列 $\mathbf{y} = [y^0, \ldots, y^{N-1}]$, 语音提示 $\mathbf{\widehat{x}}$, 以及之前生成的 Token $\mathbf{x}^{<i} = [\mathbf{x}^0, \ldots, \mathbf{x}^{i-1}]$, 模型通过将语言模型引导融合到流匹配范式中以预测当前 Token $\mathbf{x}^i$.
 
 联合分布被自回归地分解为:
 
 $$
 \begin{aligned}
-p(\bm{X} \! \mid\!\bm{y})\!
-&= \prod_{i=0}^{L-1} p(\bm{x}^i \mid \bm{x}^{<i}, \bm{y}, \bm{\widehat{x}})  \\
-&= \prod_{i=0}^{L-1} p_{\theta_\text{FM}}(\bm{x}^i \mid \bm{z}^i),\\
-\bm{z}^i&=f_{\theta_\text{LM}}(\bm{x}^{<i}, \bm{y},\bm{\widehat{x}}).
+p(\mathbf{X}|\mathbf{y})
+&= \prod_{i=0}^{L-1} p(\mathbf{x}^i | \mathbf{x}^{<i}, \mathbf{y}, \mathbf{\widehat{x}})\\
+&= \prod_{i=0}^{L-1} p_{\theta_\text{FM}}(\mathbf{x}^i | \mathbf{z}^i),\\
+\mathbf{z}^i&=f_{\theta_\text{LM}}(\mathbf{x}^{<i}, \mathbf{y},\mathbf{\widehat{x}}).
 \end{aligned}
 $$
 
-- $\bm{X} = [\bm{x}^0, \ldots, \bm{x}^{L-1}] \in \mathbb{R}^{L \times D}$ 表示完整的梅尔频谱序列, $L$ 表示梅尔频谱帧总数.
-- 语言模型 $f_{\theta_\text{LM}}(\cdot)$ 生成隐藏状态 $\bm{z}^i$, 它捕获语言内容和声学上下文,
-- $p_{\theta_\text{FM}}(\cdot \mid \bm{z}^i)$ 表示流匹配模块, 它将先验分布转换为以 $\bm{z}^i$ 为条件的条件分布.
+- $\mathbf{X} = [\mathbf{x}^0, \ldots, \mathbf{x}^{L-1}] \in \mathbb{R}^{L \times D}$ 表示完整的梅尔频谱序列, $L$ 表示梅尔频谱帧总数.
+- 语言模型 $f_{\theta_\text{LM}}(\cdot)$ 生成隐藏状态 $\mathbf{z}^i$, 它捕获语言内容和声学上下文,
+- $p_{\theta_\text{FM}}(\cdot | \mathbf{z}^i)$ 表示流匹配模块, 它将先验分布转换为以 $\mathbf{z}^i$ 为条件的条件分布.
 
 </td></tr></table>
 
@@ -220,17 +223,32 @@ $$
 <table><tr><td width="50%">
 
 The proposed framework combines an autoregressive language model with a flow-matching mechanism, which facilitates the progressive generation of high-fidelity speech.
-As shown in [Figure.01](#Fig.01), the autoregressive model $f_{\theta_\text{LM}}$ extracts features from the text prompt $\bm{y}$ and speech prompt  $\bm{\widehat{x}}$, generating latent representations $\bm{z}^i$ (where $i$ denotes the generation step) that serve as conditional inputs for the flow-matching mechanism.
-The flow-matching mechanism applies a coarse-to-fine strategy to generate high-quality mel-spectrogram frames $\bm{x}^i$.
+As shown in [Figure.01](#Fig.01), the autoregressive model $f_{\theta_\text{LM}}$ extracts features from the text prompt $\mathbf{y}$ and speech prompt $\mathbf{\widehat{x}}$, generating latent representations $\mathbf{z}^i$ (where $i$ denotes the generation step) that serve as conditional inputs for the flow-matching mechanism.
+The flow-matching mechanism applies a coarse-to-fine strategy to generate high-quality mel-spectrogram frames $\mathbf{x}^i$.
 The main components of the approach are described in detail below.
+
+</td><td>
+
+所提的框架将自回归语言模型和流匹配机制相结合, 促进高质量语音的逐步生成.
+如[图 01](#Fig.01) 所示, 自回归模型 $f_{\theta_\text{LM}}$ 从文本提示 $\mathbf{y}$ 和声学提示 $\mathbf{\widehat{x}}$ 中提取特征, 生成潜在表示 $\mathbf{z}^i$ (其中 $i$ 表示生成步数), 这些表示作为流匹配机制的条件输入.
+流匹配机制采用从粗到细的策略生成高质量的梅尔频谱帧 $\mathbf{x}^i$.
+该方法的主要组件将在下文详细描述.
 
 </td></tr>
 <tr><td colspan="2">
 
 ![](../Images/2025.02.16_FELLE_Fig.01.png)
 
+</td></tr>
+<tr><td>
+
 <a id="#Fig.02">Figure.01</a>: Overview of ***FELLE***, an autoregressive mel-spectrograms model that generates personalized speech from text and acoustic prompts.
 At each timestep, the framework relies on the previous mel-spectrogram distribution as a prior, conditioned on the output of the language model, applying a coarse-to-fine flow-matching module to produce refined spectral features.
+
+</td><td>
+
+***FELLE*** 的总览, 自回归梅尔频谱模型从文本和声学提示生成个性化语音.
+在每个时间步该框架依赖于之前的梅尔频谱分布作为先验, 以语言模型的输出为条件, 应用从粗到细的流匹配模块来生成精细的频谱特征.
 
 </td></tr></table>
 
@@ -240,10 +258,15 @@ At each timestep, the framework relies on the previous mel-spectrogram distribut
 
 The language model, designed as a unidirectional Transformer decoder, generates acoustic features autoregressively by utilizing both text sequences and mel-spectrogram prompts.
 In the initial step, the text tokens are embedded, while a pre-net maps the mel-spectrogram into the dimensional space of the LM.
-By processing the combined text $\bm{y}$, speech prompt $\bm{\widehat{x}}$, and acoustic embeddings $\bm{x}^{<i}$, the language model $f_{\theta_\text{LM}}$ processes multi-head attention and feed-forward layers to capture the intricate relationship between linguistic and acoustic information.
+By processing the combined text $\mathbf{y}$, speech prompt $\mathbf{\widehat{x}}$, and acoustic embeddings $\mathbf{x}^{<i}$, the language model $f_{\theta_\text{LM}}$ processes multi-head attention and feed-forward layers to capture the intricate relationship between linguistic and acoustic information.
 The output at each time step subsequently serves as a conditioning input for the coarse-to-fine flow-matching module to synthesize the next-frame acoustic features.
 
 </td><td>
+
+语言模型, 设计为单向的 Transformer 解码器, 通过使用文本序列和梅尔频谱提示来自回归地生成声学特征.
+在初始步骤, 文本 Token 被嵌入, 而预网络 Pre-Net 将梅尔频谱映射到语言模型的维度空间中.
+通过处理合并的文本 $\mathbf{y}$, 语音提示 $\mathbf{\widehat{x}}$, 和声学嵌入 $\mathbf{x}^{<i}$, 语言模型 $f_{\theta_\text{LM}}$ 应用多头注意力和前馈层, 以捕获语言和声学信息之间的复杂关系.
+后续每个时间步的输出都作为从粗到细流匹配模块的条件输入用于合成下一帧声学特征.
 
 </td></tr></table>
 
@@ -258,25 +281,42 @@ A detailed introduction will be given below.
 
 </td><td>
 
+为了高质量梅尔频谱生成, 我们引入从粗到细流匹配方法.
+如[图 02](#Fig.02) 所示, 方法基于前面的帧生成每个梅尔频谱帧, 保持整个序列的时序一致性.
+生成过程被分为两个阶段: 粗糙生成阶段 + 精细优化阶段.
+下面将详细介绍该方法.
+
 </td></tr>
 <tr><td colspan="2">
 
 ![](../Images/2025.02.16_FELLE_Fig.02.png)
+
+</td></tr>
+<tr><td>
 
 <a id="#Fig.02">Figure.02</a>: The coarse-to-fine flow-matching module of ***FELLE***.
 (a) The training process along with the detailed data flow within the coarse-to-fine module.
 The gray dashed lines merely indicate the relationships between components in the model structure and are not activated during training.
 (b) The inference process.
 
+</td><td>
+
+***FELLE*** 的从粗到细流匹配模块.
+(a) 训练过程, 以及粗到细模块内部的数据流.
+灰色虚线只是表示模型结构组件之间的关系, 并不在训练过程中激活.
+(b) 推理过程.
+
 </td></tr>
 <tr><td>
 
 **Prior Distribution**
 
-Flow-matching-based methods in speech synthesis commonly adopt a simple prior distribution **VoiceBox**[^le2024voicebox], **Matcha-TTS**[^mehta2024matcha], as prior knowledge is often challenging to define precisely (**F5-TTS**[^chen2024f5]).
+Flow-matching-based methods in speech synthesis commonly adopt a simple prior distribution (**VoiceBox**[^le2024voicebox], **Matcha-TTS**[^mehta2024matcha]), as prior knowledge is often challenging to define precisely (**F5-TTS**[^chen2024f5]).
 However, utilizing a prior distribution that closely aligns with the target distribution can significantly enhance computational efficiency and synthesis quality (**SpeechGPT**[^zhang2024speechgpt]).
-Given the autoregressive nature of token generation and the sequential structure of speech,***FELLE*** employs the preceding token as an informative prior to guide the flow matching process for generating the current token.
+Given the autoregressive nature of token generation and the sequential structure of speech, ***FELLE*** employs the preceding token as an informative prior to guide the flow matching process for generating the current token.
 Specifically, the prior distribution $p_0$ for the initial state $x_0^i$ of the current frame $x^i$ is derived from the mel-spectrogram of the previous frame $x^{i-1}$:
+
+<a id="#Eq.prior"></a>
 
 $$
 \begin{aligned}
@@ -289,6 +329,23 @@ For $i = 0$, where no prior frame exists, the initial state is drawn from a stan
 
 </td><td>
 
+**先验分布**
+
+语音合成中基于流匹配的方法通常采用简单的先验分布 (**VoiceBox**[^le2024voicebox], **Matcha-TTS**[^mehta2024matcha]), 因为先验知识往往难以精确定义 (**F5-TTS**[^chen2024f5]).
+然而, 使用和目标分布相近的先验分布可以显著增强计算效率和合成质量 (**SpeechGPT**[^zhang2024speechgpt]).
+
+由于 Token 生成的自回归性质和语音的顺序结构, ***FELLE*** 采用前面的 Token 作为信息性先验来引导流匹配过程生成当前 Token.
+具体来说，当前帧 $x^i$ 的初始状态 $x_0^i$ 的先验分布 $p_0$ 是从前一帧 $x^{i-1}$ 的梅尔频谱图推导出来的：
+
+$$
+\begin{aligned}
+p_0(x_0^i | x^{i-1}) = \mathcal{N}(x_0^i | x^{i-1}, \sigma^2 I),
+\end{aligned}
+$$
+
+- $\sigma^2 I$ 表示高斯噪声的协方差矩阵.
+- 对于 $i = 0$, 无先验帧存在, 初始状态从标准高斯分布中采样.
+
 </td></tr>
 <tr><td>
 
@@ -300,7 +357,7 @@ Each step $i$ follows a two-stage process, as illustrated in [Figure.02(a)](#Fig
 The coarse generation stage is designed to produce the low-resolution component $x^{i,c}$ of the $i$-th frame through a downsampling operation $x^{i,c} = \mathrm{Downsample}(x^i)$.
 In this framework, the coarse flow-matching model predicts a vector field $v_t^c(x^{i,c}, z^i; \theta_{\text{FM}}^c)$ by conditioning on linguistic features $z^i$ extracted from the language model.
 
-In the fine stage, the model refines this approximation by recovering details $x^{i,f}$, represented as the residual between the original frame $x^i$ and the upsampled coarse component $\text{\textit{Upsample}}(x^{i,c})$.
+In the fine stage, the model refines this approximation by recovering details $x^{i,f}$, represented as the residual between the original frame $x^i$ and the upsampled coarse component $\text{Upsample}(x^{i,c})$.
 A secondary flow-matching model predicts the vector field $v_t^f(x^{i,f}, z^i, x^{i,c}; \theta_\text{FM}^f)$, governing this process by leveraging both the features $z^i$ and the coarse component (with ground-truth coarse features $x^{i,c}$ during training and predicted values $\tilde{x}^{i,c}$ during inference) as conditional inputs.
 This hierarchical conditioning allows the fine model to focus on local details while preserving global coherence from the coarse stage.
 
@@ -310,11 +367,36 @@ $$
 \mathcal{L}_{\text{C2F-FM}} = \underbrace{\mathbb{E}_{t, x_1^{i,c}, x^{i,c}} \left\| u_t^c - v_t^c(x^{i,c}, z^i; \theta_\text{FM}^c) \right\|^2}_{\text{Coarse Stage}} + \underbrace{\mathbb{E}_{t, x_1^{i,f}, x^{i,f}} \left\| u_t^f - v_t^f(x^{i,f}, z^i, x_1^{i,c}; \theta_\text{FM}^f) \right\|^2}_{\text{Fine Stage}},
 \end{aligned}
 $$
-where $u_t^c$ and $u_t^f$ represent the true conditional vector fields for the coarse and fine components, respectively, and $t \sim \mathcal{U}[0,1] $.
-The initial states $x_0^{i,c}$ and $x_0^{i,f}$ are similarly initialized using the prior from Equation~\ref{eq:prior}, applying the corresponding sampling operations.
+where $u_t^c$ and $u_t^f$ represent the true conditional vector fields for the coarse and fine components, respectively, and $t \sim \mathcal{U}[0,1]$.
+The initial states $x_0^{i,c}$ and $x_0^{i,f}$ are similarly initialized using the prior from [Equation](#Eq.prior), applying the corresponding sampling operations.
 By decoupling low-resolution structure learning from high-detail refinement, this coarse-to-fine approach generates high-fidelity mel-spectrograms while maintaining temporal consistency through autoregressive dependencies.
 
 </td><td>
+
+**从粗到细生成过程**
+
+我们的方法将自回归语言建模和分层流匹配相结合.
+每一步 $i$ 遵循两个阶段的过程, 如[图 02(a)](#Fig.02) 所示: 粗糙流匹配阶段, 产生初始低分辨率梅尔频谱表示, 随后由精细流匹配阶段整合粗糙表示和语言模型输出进一步增强输出.
+- 粗糙生成阶段, 设计用于产生第 $i$ 帧的低分辨率组分 $x^{i,c}$, 即通过下采样操作 $x^{i,c} = \mathrm{Downsample}(x^i)$.
+  在本框架中, 粗糙流匹配模型以语言模型提取的语言特征 $z_i$ 为特征, 预测向量场 $v_t^c(x^{i,c}, z^i; \theta_{\text{FM}}^c)$.
+- 精细生成阶段, 模型通过恢复细节 $x^{i,f}$, 即原始帧 $x^i$ 与上采样的粗糙组分 $\text{Upsample}(x^{i,c})$ 的残差来细化近似.
+  辅助的流匹配模型预测向量场 $v_t^f(x^{i,f}, z^i, x^{i,c}; \theta_\text{FM}^f)$, 以语言特征 $z^i$ 和粗糙组分 $x^{i,c}$ 为条件来控制这一过程.
+  在训练时使用真实的粗糙特征 $x_{i,c}$, 在推理时使用预值 $\tilde{x}^{i,c}$.
+
+这一分层条件化使得精细模型专注于局部细节同时保留和粗糙阶段的全局一致性.
+
+对于第 $i$ 步, 训练目标将来自两个阶段的损失结合起来:
+$$
+\begin{aligned}
+\mathcal{L}_{\text{C2F-FM}} = \underbrace{\mathbb{E}_{t, x_1^{i,c}, x^{i,c}} \left\| u_t^c - v_t^c(x^{i,c}, z^i; \theta_\text{FM}^c) \right\|^2}_{\text{粗糙阶段}} + \underbrace{\mathbb{E}_{t, x_1^{i,f}, x^{i,f}} \left\| u_t^f - v_t^f(x^{i,f}, z^i, x_1^{i,c}; \theta_\text{FM}^f) \right\|^2}_{\text{精细阶段}},
+\end{aligned}
+$$
+
+- $u_t^c$ 和 $u_t^f$ 分别表示粗糙和精细组件的真实条件向量场.
+- $t \sim \mathcal{U}[0,1]$.
+- 初始状态 $x_0^{i,c}$ 和 $x_0^{i,f}$ 类似地使用[先验等式](#Eq.prior)中的先验分布初始化, 并应用相应的采样操作.
+
+通过分离低分辨率结构学习和高分辨率细节细化, 这种从粗到细的方法生成高质量的梅尔频谱图, 并通过自回归依赖保持时序一致性.
 
 </td></tr>
 <tr><td>
@@ -335,9 +417,27 @@ where $\ast \in \{c,f\}$ denotes the model stage, $c$ represents the full condit
 
 </td><td>
 
+**无分类器引导** 是增强流匹配生成输出的质量和可控性的强力技术 (**CFG**[^ho2022classifier], **iDDPM**[^nichol2021improved]).
+在 ***FELLE*** 中, 我们通过联合训练粗糙和精细流匹配模型, 同时使用条件和无条件目标, 实现 CFG.
+在训练过程中, 我们以概率 $p_{\text{drop}}$ 随机掩盖语音提示进行无条件化学习, 使得每个模型都能学习双向向量场.
+
+在推理时, 引导向量场通过线性混合计算:
+
+$$
+\begin{aligned}
+\hat{v}_t^\ast(x^\ast; \cdot) &= w v_t^\ast(x^\ast, c; \theta_\text{FM}^\ast) + (1-w) v_t^\ast(x^\ast, \bar{c}; \theta_\text{FM}^\ast),
+\end{aligned}
+$$
+
+- $\ast \in \{c,f\}$ 表示模型阶段 (Coarse 和 Fine),
+- $c$ 表示完整条件,
+- $\bar{c}$ 表示减少条件的状态, 即掩盖说话者提示,
+- $w$ 表示引导尺度.
+
+
 </td></tr></table>
 
-### Training Objective
+### Training Objective: 训练目标
 
 <table><tr><td width="50%">
 
@@ -358,9 +458,30 @@ where $\lambda$ and $\alpha$ control the respective contributions of $\mathcal{L
 
 </td><td>
 
+在 ***FELLE*** 中, 我们将条件损失 $\mathcal{L}_\text{cond}$ 添加到从粗到细损失 $\mathcal{L}_{\text{C2F-FM}}$.
+$\mathcal{L}_\text{cond}$ 是一种混合损失函数, 它将 L1 和 L2 范数相结合, 用于对流匹配的条件输入进行正则化.
+定义为
+
+$$
+\mathcal{L}_{\text{cond}} = \|z_i - x_i\|_1 + \|z_i - x_i\|_2^2
+$$
+
+此外, 我们引入停止预测模块到自回归语言模型.
+该模块在生成的每一步中将语言模型的隐藏状态输出通过线性层转换为停止信号的概率, 在训练时计算二元交叉熵损失 $\mathcal{L}_\text{stop}$.
+
+总训练损失目标为:
+
+$$
+\begin{aligned}
+\mathcal{L} = \mathcal{L}_{\text{C2F-FM}} + \lambda \mathcal{L}_{\text{cond}} + \alpha \mathcal{L}_{\text{stop}}
+\end{aligned}
+$$
+
+- $\lambda$ 和 $\alpha$ 分别控制 $\mathcal{L}_{\text{cond}}$ 和 $\mathcal{L}_{\text{stop}}$ 的贡献.
+
 </td></tr></table>
 
-### Inference
+### Inference: 推理
 
 <table><tr><td width="50%">
 
@@ -373,6 +494,14 @@ Secondly, the latent state $z_i$ processed by the stop prediction module to comp
 The iterative generation continues until the stop criterion is satisfied, after which a neural vocoder converts the accumulated mel-spectrogram into the final speech waveform.
 
 </td><td>
+
+如[图 02(b)](#Fig.02) 所示, 推理过程采用自回归语言模型, 基于文本和说话人提示逐步生成隐藏表示.
+在每一步 $i$ 中, 计算的潜在状态 $z_i$ 有两个关键目的.
+- 首先, 它为粗糙流匹配模块提供条件引导, 促进从前一梅尔频谱近似 $\tilde{x}^{i-1,c}$ 到当前粗糙结构估计 $\tilde{x}^{i,c}$ 的渐进转换.
+  随后, 由 $\tilde{x}^{i,c}$ 和 $z_i$ 驱动的整合信息驱动精细流匹配模块产生细化的梅尔频谱帧 $\tilde{x}^{i,f}$.
+  最后输出帧 $\tilde{x}^i$ 由这些互补的粗糙和细化预测的集成而产生.
+- 其次, 由停止预测模块处理的潜在状态 $z_i$ 用于计算停止概率, 并与预定义的阈值进行比较, 以决定是否终止过程.
+  这一迭代生成过程持续到达停止标准, 之后通过神经声码器将积累的梅尔频谱图转换为最终语音波形.
 
 </td></tr></table>
 
