--- a/Models/SpeechLM/ST2S/2025.02.16_FELLE.md
+++ b/Models/SpeechLM/ST2S/2025.02.16_FELLE.md
@@ -55,7 +55,7 @@ Experimental results demonstrate the potential of incorporating flow-matching te
 <table><tr><td width="50%">
 
 The remarkable success of large language models (LLMs) (**GPT-3**[^brown2020language], **GPT-4**[^achiam2023gpt], **Gemini 1.5**[^team2024gemini]) has prompted a paradigm shift in speech synthesis, redefining it as a language modeling task.
-This shift has driven notable progress in zero-shot speech synthesis (**VALL-E**[^wang2023valle], **VALL-E2**[^chen2024valle2]).
+This shift has driven notable progress in zero-shot speech synthesis (**VALL-E**[^wang2023valle], **VALL-E 2**[^chen2024valle2]).
 Consistent with the standard LLM training methodology, researchers have naturally adopted discrete-valued tokens as the foundational modeling units.
 However, unlike textual data, which is inherently discrete, speech signals require complex quantization techniques to transform continuous waveforms into discrete-valued tokens.
 These essential quantization processes impose fundamental constraints compared to continuous representations, particularly in terms of fidelity preservation and training complexity ([^puvvada2024discrete], **MELLE**[^meng2024autoregressive]).
@@ -64,14 +64,37 @@ In response to these limitations, recent research has increasingly explored auto
 
 </td><td>
 
+大语言模型的卓越成功 (**GPT-3**[^brown2020language], **GPT-4**[^achiam2023gpt], **Gemini 1.5**[^team2024gemini]) 促使语音合成的范式转变, 被重新定义为语言建模任务.
+这一转变促进了零样本语音合成的显著进展 (**VALL-E**[^wang2023valle], **VALL-E 2**[^chen2024valle2]).
+
+和标准的大语言模型训练方法一致, 研究人员自然地采用离散值 Token 作为基础建模单元.
+然而, 和文本数据不同, 其本质上是离散的, 而语言信号要求复杂的量化技术来将连续波形转换为离散值 Token.
+这些必要的量化过程相比连续表示施加了根本性限制, 尤其是在保真度和训练复杂度方面 ([^puvvada2024discrete], **MELLE**[^meng2024autoregressive]).
+因此, 基于离散 Token 的 TTS 系统通常面临诸如复杂建模工作流和输出质量降低等挑战.
+
+为了应对这些局限性, 近期研究倾向于探索使用连续表示的自回归建模架构 (**MELLE**[^meng2024autoregressive], **SALAD**[^turetzky2024continuous], **KALL-E**[^zhu2024autoregressive]), 在模型性能方面显示出显著提升并简化了训练过程.
+
 </td></tr>
 <tr><td>
 
 However, modeling continuous representations introduces its own set of challenges.
 Due to the rich information contained in continuous representations, modeling them demands more advanced capabilities from models.
 Conventional regression-based loss functions used in **MELLE**[^meng2024autoregressive], including mean absolute error (MAE) and mean squared error (MSE), adopt oversimplified distributional assumptions.
-These assumptions may not fully capture the multimodal structures and complex features of the distribution, leading to blurred, oversimplified, or averaged predictions [^vasquez2019melnet], [^ren-etal-2022-revisiting].
-Similarly, **KALL-E** relies on WaveVAE-derived distributions, but the restrictive Gaussian prior assumption in **Variational Autoencoder (VAE)**[^kingma2013auto] limits their ability to model complex speech patterns, leading to low-diversity and blurry samples ([^tomczak2018vae], [^bredell2023explicitly]).
+These assumptions may not fully capture the multimodal structures and complex features of the distribution, leading to blurred, oversimplified, or averaged predictions (**MelNet** [^vasquez2019melnet], [^ren-etal-2022-revisiting]).
+Similarly, **KALL-E**[^zhu2024autoregressive] relies on WaveVAE-derived distributions, but the restrictive Gaussian prior assumption in **Variational Autoencoder (VAE)**[^kingma2013auto] limits their ability to model complex speech patterns, leading to low-diversity and blurry samples ([^tomczak2018vae], [^bredell2023explicitly]).
+
+</td><td>
+
+然而, 建模连续表示引入了其本身的挑战.
+由于连续表示中包含的丰富信息, 建模它们需要模型具有更高级能力.
+
+**MELLE**[^meng2024autoregressive] 中使用传统的基于回归的损失函数, 包括平均绝对误差 (MAE) 和均方误差 (MSE), 采取了过于简单的分布假设.
+这些假设可能无法完全捕捉分布的多模态结构和复杂特征, 导致模糊, 过于简单或平均预测 (**MelNet** [^vasquez2019melnet], [^ren-etal-2022-revisiting]).
+
+类似地, **KALL-E**[^zhu2024autoregressive] 依赖于 **WaveVAE** 导出的分布, 但由于 **VAE**[^kingma2013auto] 中的高斯先验假设限制了它们建模复杂语音模式的能力, 导致低多样性和模糊样本 ([^tomczak2018vae], [^bredell2023explicitly]).
+
+</td></tr>
+<tr><td>
 
 A further limitation of existing approaches lies in the inadequate modeling of temporal dependencies.
 Current methodologies primarily use autoregressive architecture to implicitly capture temporal dependencies, yet they lack explicit mechanisms to model temporal relationships.
@@ -82,6 +105,16 @@ Notably, continuous-valued tokens like mel-spectrograms inherently exhibit stron
 Insufficient consideration of these correlations could compromise the model's ability to preserve speech's sequential characteristics, potentially affecting output naturalness and requiring additional computational resources.
 
 </td><td>
+
+现有方法的更多局限性在于对时序依赖的不充分建模.
+现有方法主要使用自回归架构隐式捕获时序依赖, 然而它们缺乏显式机制来建模时序关系.
+这种结构特征可能限制了他们在处理复杂时序依赖方面的有效性 (**VALL-E R**[^han2024valler]).
+
+- **SALAD**[^turetzky2024continuous] 基于扩散过程, 无显式时序建模地独立对 Token 去噪.
+- **MELLE**[^meng2024autoregressive] 应用 Flux 损失仅关注递增帧级变化, 过于简单地建模时序关系.
+
+需要注意连续值 Token 如梅尔频谱在时序和频率维度上自然地具有强相关性 [^ren-etal-2022-revisiting].
+对这些相关性的缺乏考虑可能会妨碍模型的能力, 潜在影响输出自然度和需要额外计算资源.
 
 </td></tr>
 <tr><td>
@@ -99,6 +132,22 @@ Our contributions can be summarized as:
 - We introduce a coarse-to-fine flow matching architecture that explicitly captures inter-frequency correlations through multi-stage spectral refinement, achieving significant improvements in mel-spectrogram generation.
 
 </td><td>
+
+在本项工作中, 我们介绍了 ***FELLE***, 一个自回归语音合成框架, 利用 Token 级从粗到细的流匹配进行连续值 Token 建模.
+和基于回归或 VAE 的方法 (在其他方法中常用) 用预设分布假设不同, **流匹配**[^lipman2022flow] 允许灵活的密度估计而无需受到先验假设的限制, 从而保留语音的多模态特性.
+
+同时, 通过将语言模型的自回归性质和流匹配技术结合, 我们开发了时序建模机制, 通过整合先前的上下文信息, 动态调整每帧的先验分布.
+这一架构有效地保持了时序依赖并确保了谱连续性.
+
+此外, 我们提出了一个 ***从粗到细的流匹配 (C2F-FM)*** 模块通过捕获中间频率相关性用于提升生成质量.
+它以多阶段方式合成梅尔频谱特征, 受到离散 Token 建模中从粗到细方法的有效性 (**AudioLM**[^borsos2023audiolm], **Moshi**[^defossez2024moshi]) 的启发, 捕获了序列任务中的结构依赖.
+
+在 **LibriSpeech 语料库**[^panayotov2015librispeech] 上的评估展示了框架的竞争力: 与 **MELLE** 相比, 我们的方法取得了相当的词错误率 (WER), 同时在建模复杂梅尔频谱模式方面取得了更好的相似性分数.
+
+我们的贡献可以总结为:
+- 我们提出了自回归语音合成框架, 利用了 Token 级流匹配进行连续语音建模, 消除了分布假设限制, 保持语音信号的多模态特性.
+- 我们设计了动态先验机制, 修改流匹配中的原始先验分布, 将来自先前步骤的信息融合, 提升了一致性和稳定性.
+- 我们引入了一个从粗到细的流匹配架构, 通过多阶段频谱细化, 显式捕获中间频率相关性, 实现了梅尔频谱生成的显著改进.
 
 </td></tr></table>
 
@@ -554,8 +603,7 @@ ICLR2023.
 [^panayotov2015librispeech]: [**LibriSpeech**: An ASR Corpus Based on Public Domain Audio Books.](../../../Datasets/2015.04.19_LibriSpeech.md) ICASSP2015.
 [^puvvada2024discrete]: Discrete Audio Representation as an Alternative to Mel-Spectrograms for Speaker and Speech Recognition.
 ICASSP2024.
-[^ren-etal-2022-revisiting]: Revisiting Over-Smoothness in Text to Speech.
-ACL2022.
+[^ren-etal-2022-revisiting]: Revisiting Over-Smoothness in Text to Speech. ACL2022.
 [^song2024ellav]: [**ELLA-V**: Stable Neural Codec Language Modeling with Alignment-Guided Sequence Reordering.](2024.01.14_ELLA-V.md) ArXiv2024.
 [^team2024gemini]: [**Gemini 1.5**: Unlocking Multimodal Understanding Across Millions of Tokens of Context.](../../TextLM/2024.03.08_Gemini_1.5.md) ArXiv:2403.05530.
 [^tomczak2018vae]: VAE with a VampPrior.
